Upload index.html instead

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
                     <p>I love cooking, baking and trying out different food recipes.</p>
 
-                    <p>On the other hand, I am just a begineer in web developement. I check out courses I can take to learn it. I also take Arabic lessons.</p>
+                    <p>On the other hand, I am just a begineer in web developement. I check out courses I can take to learn it. I also take Arabic classes.</p>
                 
                     <br>
 
