Upload index.html instead

--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
                     <img id="social_img" src="images/follow.jpg">
                     <h4>Find me on:</h4>
 
-                    <p><a target="_blank" href= "https://twitter.com/nimot65789251">Twitter: @Nimot65789257</a></p>
+                    <p><a target="_blank" href= "https://twitter.com/NimotRaji">Twitter: @NimotRaji</a></p>
                     <!-- <br> -->
-                    <p><a target="_blank" href= "#">Gmail: nimotraji@gmail.com</a></p>
+                    <p><a href= "#">Gmail: nimotraji@gmail.com</a></p>
 
                 </div>
 
